<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/school_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="@dimen/school_name_text_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_height"
        android:layout_below="@id/school_name"
        android:background="@android:color/black" />


    <TextView
        android:id="@+id/statistics_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/header_container"
        android:layout_marginStart="@dimen/view_starting_margin"
        android:text="@string/sat_overview"
        android:textSize="@dimen/sat_overview_text_size" />

    <View
        android:layout_width="@dimen/border_width"
        android:layout_height="@dimen/border_height"
        android:layout_below="@id/statistics_header"
        android:layout_alignStart="@id/statistics_header"
        android:layout_centerInParent="true"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/statistics_header"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/number_of_test_takers_header"
            style="@style/HeaderAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_test_takers_header" />

        <TextView
            android:id="@+id/critical_reading_header"
            style="@style/HeaderAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critical_reading_header" />

        <TextView
            android:id="@+id/math_header"
            style="@style/HeaderAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_header" />

        <TextView
            android:id="@+id/writing_header"
            style="@style/HeaderAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writing_header" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scores_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/starting_layout_margin"
        android:layout_toEndOf="@id/header_container"
        android:orientation="vertical">

        <TextView
            android:id="@+id/number_of_test_takers"
            style="@style/TestScoreAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            tools:text="91" />

        <TextView
            android:id="@+id/critical_reading_score"
            style="@style/TestScoreAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="500" />

        <TextView
            android:id="@+id/math_score"
            style="@style/TestScoreAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="600" />

        <TextView
            android:id="@+id/writing_score"
            style="@style/TestScoreAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="500" />

    </LinearLayout>

    <TextView
        android:id="@+id/school_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/school_address"
        android:layout_centerInParent="true"
        android:textSize="@dimen/detail_phone_text_size"
        android:textStyle="bold"
        tools:text="555-555-5555" />

    <TextView
        android:id="@+id/school_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textSize="@dimen/detail_website_text_size"
        android:textStyle="bold"
        tools:text="www.yourwebsite.com" />

    <TextView
        android:id="@+id/school_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/school_website"
        android:layout_centerInParent="true"
        android:textSize="@dimen/detail_address_text_size"
        android:textStyle="bold"
        tools:text="111 Lane Street, Columbus, OH 43206" />

</RelativeLayout>